2da clase java script

--- a/HTML/segunda.html
+++ b/HTML/segunda.html
@@ -6,19 +6,15 @@
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="../CSS/bootstrap.min.css" />
-    <script src="../JavaScript/primera.js"></script>
+    <script src="../js/segunda.js"></script>
 
 </head>
-
 <body>
- 
+  
+<h2>HOLA</h2>
 
+<div id="resultado">Moises se fue a la Playa</div>
+<button type="button" onclick="resultado()">Intentalo</button>
     
-<h2>JavaScript in Head</h2>
-
-<p id="responsabilidad">A Paragraph.</p>
-
-<button type="button" onclick="javaNoEsJavascrit()">Intentalo</button>
-
-</body>
-</html> 
+    </body>
+    </html>
