--- a/HTML/tercer.html
+++ b/HTML/tercer.html
@@ -6,7 +6,9 @@
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="../CSS/bootstrap.min.css" />
-    <script src="../JavaScript/primera.js"></script>
+    <script src="../js/tercer.js"></script>
+
+
 
 </head>
 
@@ -14,11 +16,12 @@
  
 
     
-<h2>JavaScript in Head</h2>
+<h2>HOLA</h2>
 
-<p id="responsabilidad">A Paragraph.</p>
+<div id="tablas"></div>
+<button type="button" onclick="tablas()">Intentalo</button>
 
-<button type="button" onclick="javaNoEsJavascrit()">Intentalo</button>
 
-</body>
-</html> 
+    
+    </body>
+    </html>
