ejercisios de funciones

--- a/HTML/primera.html
+++ b/HTML/primera.html
@@ -26,7 +26,48 @@
     </body>
     </html>
 
-
+    div class="row">
+    <div class="col-3"><b>Alumno</b></div>
+    <div class="col-3"><b>Nombre</b></div>
+    <div class="col-3"><b>Apellidos</b></div>
+    <div class="col-3"><b>Edad</b></div>
+</div>
+<div class="row">
+    <div class="col-3">Alumno 1</div>
+    <div class="col-3">Ramses</div>
+    <div class="col-3">Playa</div>
+    <div class="col-3">55</div>
+</div>
+<div class="row">
+    <div class="col-3">Alumno 2</div>
+    <div class="col-3">Jonathan</div>
+    <div class="col-3">El serio</div>
+    <div class="col-3">80</div>
+</div>
+<div class="row">
+    <div class="col-3">Alumno 3</div>
+    <div class="col-3">Liz</div>
+    <div class="col-3">Esta bien facil</div>
+    <div class="col-3">15</div>
+</div>
+<div class="row">
+    <div class="col-3">Alumno 4</div>
+    <div class="col-3">Jorge</div>
+    <div class="col-3">Albures</div>
+    <div class="col-3">30</div>
+</div>
+<div class="row">
+    <div class="col-3">Alumno 5</div>
+    <div class="col-3">Ricardo</b></div>
+    <div class="col-3">Anaya</div>
+    <div class="col-3">41</div>
+</div>
+<div class="row">
+    <div class="col-3">Alumno 6</div>
+    <div class="col-3">Jair</div>
+    <div class="col-3">Apellido chino</div>
+    <div class="col-3">55</div>
+</div>
 
 
 
