--- a/HTML/tercer.html
+++ b/HTML/tercer.html
@@ -8,20 +8,14 @@
     <link rel="stylesheet" type="text/css" media="screen" href="../CSS/bootstrap.min.css" />
     <script src="../js/tercer.js"></script>
 
-
-
 </head>
-
-<body>
- 
-
-    
-<h2>HOLA</h2>
-
-<div id="tablas"></div>
-<button type="button" onclick="tablas()">Intentalo</button>
+<body>  
 
 
-    
-    </body>
-    </html>
+
+<div id="pon_codigo_html" class="container"></div>
+<button type="button" onclick="miPrimerFuncion()">Intentalo</button> 
+
+
+</body>
+</html>
